# sample-code

./: .gitignore  .gitmodules  nginx.conf  stream-play.sh  stream-push.sh
CV/camera_calibration/: CMakeLists.txt  split.py
Graphic/opencl/: Makefile  build-qnx  opencl_test.c
Lang/c/: c_oop.c
Lib/cairo/: Makefile
Tools/nginx/: env-pre.sh
Tools/zypper-update/: zypper-update-loop.sh
Web/http/: HttpRequest.cpp
asm/nasm/: Makefile  hang.c
c++/Property/: main.cpp
c++/UnixSocket/: UnixSocket.cpp  UnixSocket.hpp  UnixSocket_Server.cpp
c++/jsoncpp/: jsoncpp_test.cpp
c++/macros/: main.cpp
c++/std/: c++11_forward.cpp
c/mtrace/: Makefile
c/utils/: save_file.c
cv/camera_calibration/: README.txt  fisheye_camera_calibration.cpp
cv/undistort_image/: undistort_image.cpp
dbus/: glib-dbus-standlone.c
doc/tool/: gcc.md  git.md
ffmpeg/audio/: Makefile
http/: HttpRequest.h
java/spring-boot/: pom.xml
linux/hook_so/: Makefile  main.c  test.c  test.h
linux/lfs/: lfs_download.sh
node.js/web/: readme.org
opencv/alg/: cvFindChessboardCorners_test.cpp
opencv/opencv_ffmpeg_rtmp/: Makefile  rtmp-stream.cpp
opencv/test1/: testcase.cc
opengl/: pbuffer_test.cpp
python/: pipe_test_1.py
python/PyQt/: QSS.py  icmp.py  lan_scan_v2.0.py  osc_login.py  ping_pip.py
sh/: tty-color.sh
src/audio/: Makefile  fdk-aac-test.c
src/bootstrap/: index.html
src/c++/: List.h
src/dbus/: Makefile
src/hardware/: spi.c
src/http/: Makefile  main.cpp
src/python/: pipe_test_2.py
src/usb/: 51-android.rules  (+1 more)
zypper-update/: check_timeout_restart.sh
(+354 files in other folders)
